2009-11-13  Kenichi Handa  <handa@m17n.org>

	* category.c (word_boundary_p): Adjusted for the change of the
	semantics of Vword_combining_categories.
	(Vword_combining_categories): Describe the slight change of the
	semantics.

2009-11-13  Eli Zaretskii  <eliz@gnu.org>

	* menu.c (Fx_popup_menu): Call Fx_hide_tip only if HAVE_WINDOW_SYSTEM.

	* s/msdos.h (SYSTEM_PURESIZE_EXTRA): Revert last change.

2009-11-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (syms_of_xdisp): Fix typo in last change.

2009-11-12  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in: Update dependencies; add dependencies to lisp.h.

2009-11-11  David Reitter  <david.reitter@gmail.com>

	* menu.c (Fx_popup_menu): Remove left-over debugging code and rename
	variables to fix 2009-11-09 change.

2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* process.c (ifflag_def): Make flag_sym constant.
	(Fnetwork_interface_info): Use a constant pointer.
	(ifflag_table):
	* xfns.c (cursor_bits):
	* xdisp.c (power_letter):
	* termcap.c (speeds, esctab):
	* sysdep.c (baud_convert):
	* keyboard.c (lispy_accent_codes, modifier_names):
	* image.c (xbm_format, xpm_format, pbm_format, png_format)
	(jpeg_format, tiff_format, gif_format, svg_format)
	(interlace_start, interlace_increment, gs_format):
	* gtkutil.c (separator_names):
	* fringe.c (swap_nibble):
	* fns.c (base64_value_to_char, base64_char_to_value):
	* fileio.c (make_temp_name_tbl):
	* coding.c (suffixes): Make constant.

	* frame.c (make_initial_frame):
	* buffer.c (init_buffer_once): Use make_pure_c_string instead of
	build_string.
	* alloc.c (syms_of_alloc): Build Vmemory_signal_data in pure memory.

	* s/freebsd.h:
	* s/netbsd.h: Remove code referring to non-existent file: unexsunos4.o.

	* Makefile.in: Add dependencies to lisp.h.  Remove dependencies
	for non-existent files: unexmips.c, unexnext.c, abbrev.c, malloc.c.

	* xfns.c (syms_of_xfns): Use make_pure_string instead of build_string.
	* xterm.c (syms_of_xterm):